# XCFD

./: .gitignore  CMakeLists-Chenna-JADE.txt  CMakeLists-Chenna-Sunbird.txt  CMakeLists-Chenna-laptop.txt  CMakeLists.txt  README-JADE.md  README.md
src/: incexplicitParallel.cpp  incexplicitSerial.cpp  incexplicitdts.cpp  incimplicit.cpp  infsup.cpp
src/base/: BasisFunctionsBernstein.cpp  BasisFunctionsBernstein.h  BernsteinElem2DINSQuad9Node.cpp  BernsteinElem2DINSQuad9Node.h  BernsteinElem2DINSTria6Node.cpp  BernsteinElem2DINSTria6Node.h  BernsteinElem3DINSTetra10Node.cpp  BernsteinElem3DINSTetra10Node.h  ElementBase.h  ExplicitCFD.cpp  ExplicitCFD.h  ExplicitCFD2.cpp  ExplicitCFD3.cpp  KimMoinFlow.h  SolutionData.cpp  SolutionData.h  elementutilitiesbasisfuncs.cpp  elementutilitiescfd.cpp  elementutilitiescfd.h  headersBasic.h
